--- a/styles/variables.less
+++ b/styles/variables.less
@@ -8,18 +8,17 @@
 @expertise-txtcolor: #FFFFFF;
 
 @footer-txtcolor: #B8B8C2;
+@footer-bgcolor: #FFFFFF;
 @input-bgcolor: #C6C6C6;
 @input-txtcolor: #FFFFFF;
 @input-placeholder-txtcolor: #FFFFFF;
 
-/*
 @lod-txtcolor: #FFFFFF;
 @lod-bgcolor: #B8B8C2;
 @lol-txtcolor: #FFFFFF;
 @lol-bgcolor: #EEEFEF;
 @dol-txtcolor: #B8B8C2;
 @dol-bgcolor: #EEEFEF;
-*/
 
 
 @splash-txtcolor: #E9E9E9;
