--- a/styles/header.less
+++ b/styles/header.less
@@ -7,6 +7,7 @@ header {
     nav.navbar {
         margin-bottom: 0;
         background-color: @header-bgcolor;
+        border-color: @header-bgcolor;
         .navbar-header {
             width: 100%;
             font-family: 'montserratbold';
@@ -32,6 +33,16 @@ header {
 
 footer {
     color: @footer-txtcolor;
+    background-color: @footer-bgcolor;
+    ul {
+        margin: 10px 0 0;
+    }
+    .boulder {
+        height: 70px;
+    }
+    p small {
+        font-size: 12px;
+    }
 }
 
 header, footer {
