add some backgrounds update dynamic bg style contact

--- a/styles/expertise.less
+++ b/styles/expertise.less
@@ -8,10 +8,7 @@
     .under-layer {
         background-color: @expertise-primary-bgcolor;
         position: fixed;
-        width: 100%;    
-        canvas {
-            position: absolute;
-        }
+        width: 100%;  
         .our-buisness .row div.text {
             vertical-align: middle;
         }
@@ -24,6 +21,7 @@
         z-index: 200;
         margin-bottom: 1200px;
         background-color: @expertise-secondary-bgcolor;
+        background-image: url('/images/experties/back-poly-bottom.jpg');
         .skewed {
             height: 75px;
             background: @expertise-secondary-bgcolor;
