--- a/styles/variables.less
+++ b/styles/variables.less
@@ -20,5 +20,7 @@
 @dol-txtcolor: #B8B8C2;
 @dol-bgcolor: #EEEFEF;
 
-
 @splash-txtcolor: #E9E9E9;
+
+@contact-txtcolor: #FFFFFF; //white
+@contact-button-bgcolor: #00FFFF; //aqua
