--- a/styles/contact.less
+++ b/styles/contact.less
@@ -1,9 +1,26 @@
+@import 'variables.less';
 #contact {
+    background-image: url("/images/contact/back-poly-top.jpg");
+    color: @contact-txtcolor;
+    .glyphicon {
+        padding: 10px;
+    }
+    input, textarea {
+        background-color: rgba(255,255,255,.3); // %30 opacity white
+    }
+    button {
+        border: none;
+        background-color: @contact-button-bgcolor;
+    }
     .info {
         font-weight: lighter;
     }
-    .light-on-dark {
-        padding: 40px 20px;
+    .solid-box {
+        background: black;
+    }
+    .box {
+        padding: 20px;
         margin: 20px 0 40px;
+        background: rgba(0,0,0,.4);//40% opacity black
     }
 }
