--- a/styles/header.less
+++ b/styles/header.less
@@ -34,6 +34,7 @@ header {
 footer {
     color: @footer-txtcolor;
     background-color: @footer-bgcolor;
+    position: relative;
     ul {
         margin: 10px 0 0;
     }
